<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="100"
        android:title="@string/action_referesh"
        app:showAsAction="always|withText" />


    <item
        android:id="@+id/action_backcat"
        android:icon="@drawable/ic_refresh"
        android:title="@string/action_voltar"
        android:orderInCategory="100"
        app:showAsAction="never"/>


    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never"
        android:orderInCategory="100"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>



</menu>