<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.Cadastro"
    android:background="@color/colorPrimary">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edt_cad_nome"
        android:layout_marginTop="35dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/white"
        android:hint="@string/hint_cad_email"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edt_cad_senha"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/white"
        android:hint="@string/hint_cad_senha"
        android:layout_below="@+id/edt_cad_nome"
        android:layout_alignLeft="@+id/edt_cad_nome"
        android:layout_alignStart="@+id/edt_cad_nome"
        android:layout_marginTop="39dp"
        android:layout_alignRight="@+id/edt_cad_nome"
        android:layout_alignEnd="@+id/edt_cad_nome" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progBar_cad"
        android:elevation="20dp"
        android:layout_below="@+id/edt_cad_senha"
        android:layout_toRightOf="@+id/cadStatus"
        android:layout_toEndOf="@+id/cadStatus"
        android:indeterminate="false"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/st_cadastro"
        android:id="@+id/cadStatus"
        android:textColor="@color/control_highlight"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enviar"
        android:id="@+id/bnt_enviar_cad"
        android:onClick="enviar_cad"
        android:layout_below="@+id/edt_cad_senha"
        android:layout_alignLeft="@+id/edt_cad_senha"
        android:layout_alignStart="@+id/edt_cad_senha" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="O cadastro será feito apenas uma unica vez."
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAccent" />

</RelativeLayout>
