<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.FilmeTela2"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgBChat1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:onClick="chat1"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/icon_chat1" />

            <ImageButton
                android:id="@+id/imgBChat2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:onClick="chat2"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/icon_chat2" />

            <ImageButton
                android:id="@+id/imgBChat3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="chat3"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/icon_chat3" />

            <ImageButton
                android:id="@+id/imgBChat4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="chat4"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/icon_chat4" />

            <ImageButton
                android:id="@+id/imgBChat5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="chat5"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/icon_chat5" />

            <ImageButton
                android:id="@+id/imgBChat6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="chat6"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/icon_chat6" />

            <ImageButton
                android:id="@+id/imgBChat7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="chat7"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/icon_chat7" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/LayoutCadChat"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/cardview_light_background"
        android:orientation="horizontal"
        android:padding="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="horizontal"
                android:padding="20dp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/edTextNomeChat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_nome_chat"
                    android:inputType="textPersonName"
                    android:onClick="poeNome" />

                <Button
                    android:id="@+id/btnChatNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="chat_trava"
                    android:text="Logar no Chat"
                    android:theme="@style/Base.AlertDialog.AppCompat.Light" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="bottom|center"
                    android:layout_margin="20dp"
                    app:srcCompat="@drawable/splash1" />

                <TextView
                    android:id="@+id/txt_contagem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="50dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@color/card_default_background"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/ajuda"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@color/dismiss_close_pressed"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_play_tela2"
            android:layout_width="@dimen/prog_TV_play_whith"
            android:layout_height="@dimen/prog_TV_play_higtht"
            android:layout_gravity="top|right|center"
            android:onClick="play_prog_Tv"
            android:src="@drawable/play_1" />

        <TextView
            android:id="@+id/text_tela2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_margin="10dp"
            android:text="@string/play_entrar"
            android:textAlignment="viewStart"
            android:textColor="@color/card_default_background"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/pb_webView_tela2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:indeterminate="false"
            android:visibility="invisible" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/FrameLayoutWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <WebView
            android:id="@+id/webView_tela2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scrollbars="vertical|none" />

    </FrameLayout>

</LinearLayout>
